# x.rs

./: Cargo.toml  README.md  x-root.kdl
examples/: example.sh
src/: config.rs  find.rs  main.rs  parser.rs
